glFusion ChangeLog

v1.1.9
------
- New BBCode editor API (Mark)
- New Environment Check option in Command & Control Screen. Removed PHP info
  link from MG admin screen (Mark)
- New Admin Global User Preference Editor - allows admin to change some
  preferences for all users (Mark)
- Admin user editor now supports editing all user attributes (Mark)
- Feature to allow groups be applied for all new users (Mark)
- Media Gallery: Updated Polish translations (Mark)
- Forum: Implemented user option to enable / disable WYSIWYG editor (Mark)
- Yet another fix to the ATOM webservices publishing code (Mark)
- Improved error detection on file uploads - ensure proper errors are
  reported (Mark)
- Fixed namespace conflicts with DokuWiki 2.0 plugin (Mark)
- Complete implementation of PLG_getItemInfo for each bundled plugin. (Mark)
- Forum: Implemented merge topic feature (Mark)
- Forum: Rewrote the moderation system to be more procedural. This will
  help with future enhancements to moderation features (Mark)
- Forum: Site Members report did not honor Forum Activity checkbox (Mark)
- Forum: Implemented per topic options (Disable BBCode, Disable Smilies,
  Disable URL Parse) (Mark)
   - 3 new Forum configuration options to set the default value for each
     of the new features
- Forum: Implemented automatic URL parsing for topics (Mark)
- Forum: Implemented user preference to specify view topic sort order (Mark)
- FileMgmt: Implemented configuration option to turn on / off ratings (Mark)
- Implemented reset rating for stories (Mark)
- Implemented site upgrade check/reminder (Mark H.)
- Implemented block-specific styling, eg. block div id=block_name (Mark H.)

v1.1.8.pl4
----------
- SpamX: Fixed preg compilation error in SpamX plugin (Mark)
- Media Gallery: Fixed keywords so they now wrap properly (Mark)

v1.1.8.pl3
----------
- FileMgmt: file_download auto tag did not work properly when URL rewrite
  is enabled in the site configuration (Mark)